--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,9 +12,13 @@
 @import "components/composition";
 @import "components/feature-box";
 @import "components/story";
+@import "components/form";
 @import "components/bg-video";
+@import "components/popup";
 
 @import "layout/grid";
 @import "layout/header";
+@import "layout/navigation";
+@import "layout/footer";
 
 @import "pages/home";
